examples/test/testpolicy7282.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7282
  namespace: namespace337
spec:
  podSelector:
    matchLabels:
      key24: value43
      key10: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value45
          key19: value12
          key16: value48
      podSelector:
        matchLabels:
          key17: value16
          key21: value49
          key12: value18
